plugins {
    id 'dev.architectury.loom' version '1.9-SNAPSHOT' apply false
    id 'architectury-plugin' version '3.4-SNAPSHOT'
    id 'com.gradleup.shadow' version '8.3.7' apply false
    id 'io.freefair.lombok' version '8.13.1'
    id 'maven-publish'
    id 'signing'
}

architectury {
    minecraft = project.minecraft_version
}

allprojects {
    apply plugin: "architectury-plugin"

    group = rootProject.maven_group
    version = rootProject.mod_version
}

subprojects {
    apply plugin: 'dev.architectury.loom'
    apply plugin: 'architectury-plugin'
    apply plugin: 'maven-publish'
    apply plugin: 'com.gradleup.shadow'
    apply plugin: 'signing'

    base {
        // Set up a suffixed format for the mod jar names, e.g. `example-fabric`.
        archivesName = "$rootProject.archives_name-$project.name"
    }

    repositories {
        mavenCentral()

        maven { url 'https://maven.azuredoom.com/mods' }
        maven {
            name = 'GeckoLib'
            url 'https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/'
        }
        maven {
            name "KosmX's maven"
            url 'https://maven.kosmx.dev/'
        }
        maven { url = "https://maven.parchmentmc.org" }
        maven {
            name = "Ladysnake"
            url = "https://maven.ladysnake.org/releases"
        }
        maven { url "https://maven.terraformersmc.com/releases/" }
        maven { url "https://maven.shedaniel.me/" }
        maven {
            name = "Modrinth"
            url = "https://api.modrinth.com/maven"
        }
        maven {
            url "https://cursemaven.com"
        }
        maven {
            url = "https://maven.minecraftforge.net/"
        }
    }

    dependencies {
        minecraft "net.minecraft:minecraft:$rootProject.minecraft_version"
        mappings loom.layered() {
            officialMojangMappings()
            parchment("org.parchmentmc.data:parchment-${project.minecraft_version}:${project.parchment_mappings}@zip")
        }
        compileOnly "com.google.guava:guava:32.1.2-jre" // To make TypeToken not 'unstable' :)
        runtimeOnly "org.joml:joml:1.10.4"

        compileOnly 'org.projectlombok:lombok:1.18.32'
        annotationProcessor 'org.projectlombok:lombok:1.18.32'
    }

    java {
        // Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
        // if it is present.
        // If you remove this line, sources will not be generated.
        withSourcesJar()

        sourceCompatibility = JavaVersion.VERSION_17
        targetCompatibility = JavaVersion.VERSION_17
    }

    tasks.withType(JavaCompile).configureEach {
        it.options.release = 17
    }

    tasks.withType(org.gradle.jvm.tasks.Jar).configureEach {
        it.zip64 = true // Enable ZIP64 for large JARs
    }

    // Configure Maven publishing.
    publishing {
        publications {
            //noinspection GroovyAssignabilityCheck
            mavenJava(MavenPublication) {
                artifactId = base.archivesName.get()
                from components.java
            }
        }

        // See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
        repositories {
            maven {
                name = 'planetMaven'
                url = 'https://maven.planetteamspeak.dev/releases'
                credentials(org.gradle.api.credentials.PasswordCredentials)
                authentication {
                    //noinspection GroovyAssignabilityCheck
                    basic(BasicAuthentication)
                }
            }
        }
    }

    signing {
        sign publishing.publications.mavenJava
    }
}
